--- a/Python_RankedChoice.ipynb
+++ b/Python_RankedChoice.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "id": "2bfcafb5",
    "metadata": {
     "deletable": false,
@@ -93,7 +93,9 @@
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "\n",
+    "candidates = [\"Mickey\", \"Minnie\",\"Goofy\", \"Pluto\", \"Donald\", \"Daisy\"]"
    ]
   },
   {
@@ -126,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "id": "49202181",
    "metadata": {
     "deletable": false,
@@ -142,11 +144,50 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n",
+      "['Minnie', 'Daisy', 'Donald', 'Pluto', 'Mickey', 'Goofy']\n",
+      "['Donald', 'Minnie', 'Daisy', 'Pluto', 'Goofy', 'Mickey']\n",
+      "['Pluto', 'Daisy', 'Donald', 'Goofy', 'Mickey', 'Minnie']\n",
+      "['Goofy', 'Mickey', 'Minnie', 'Donald', 'Pluto', 'Daisy']\n",
+      "['Mickey', 'Donald', 'Goofy', 'Pluto', 'Minnie', 'Daisy']\n",
+      "['Goofy', 'Daisy', 'Donald', 'Minnie', 'Pluto', 'Mickey']\n",
+      "['Goofy', 'Daisy', 'Minnie', 'Donald', 'Pluto', 'Mickey']\n",
+      "['Donald', 'Goofy', 'Pluto', 'Mickey', 'Daisy', 'Minnie']\n",
+      "['Mickey', 'Goofy', 'Daisy', 'Pluto', 'Minnie', 'Donald']\n",
+      "['Mickey', 'Minnie', 'Daisy', 'Goofy', 'Pluto', 'Donald']\n",
+      "['Pluto', 'Minnie', 'Donald', 'Daisy', 'Goofy', 'Mickey']\n",
+      "['Minnie', 'Donald', 'Daisy', 'Goofy', 'Pluto', 'Mickey']\n",
+      "['Goofy', 'Minnie', 'Mickey', 'Pluto', 'Donald', 'Daisy']\n",
+      "['Daisy', 'Pluto', 'Donald', 'Mickey', 'Goofy', 'Minnie']\n",
+      "['Goofy', 'Mickey', 'Daisy', 'Donald', 'Minnie', 'Pluto']\n",
+      "['Daisy', 'Pluto', 'Mickey', 'Minnie', 'Goofy', 'Donald']\n",
+      "['Pluto', 'Daisy', 'Mickey', 'Minnie', 'Goofy', 'Donald']\n",
+      "['Minnie', 'Pluto', 'Mickey', 'Donald', 'Goofy', 'Daisy']\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "\n",
+    "import random\n",
+    "ballots = []\n",
+    "ballots_count = 18\n",
+    "\n",
+    "#random.sample()\n",
+    "\n",
+    "for i in range (0,ballots_count):\n",
+    "    #rand_num = random.randint(1,len(candidates))\n",
+    "    ballots.append(random.sample(candidates,len(candidates)))\n",
+    "\n",
+    "print(ballots_count)\n",
+    "print(*ballots,sep='\\n')"
    ]
   },
   {
@@ -181,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "id": "104c1b4b",
    "metadata": {
     "deletable": false,
@@ -197,11 +238,107 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Minnie': 3, 'Donald': 2, 'Pluto': 3, 'Goofy': 5, 'Mickey': 3, 'Daisy': 2}\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "\n",
+    "def counts(ballotsList):\n",
+    "  results = {}\n",
+    "  for ballot in ballotsList:\n",
+    "      if not ballot:\n",
+    "          continue\n",
+    "      elif ballot[0] not in results:\n",
+    "          results[ballot[0]] = 1\n",
+    "      else:\n",
+    "          results[ballot[0]] += 1\n",
+    "  return results\n",
+    "\n",
+    "perfect_count = counts(ballots)\n",
+    "print(perfect_count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e82ab239",
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "nbgrader": {
+     "cell_type": "markdown",
+     "checksum": "0bd6fb1d980cf352141f1e88dd1c000f",
+     "grade": false,
+     "grade_id": "cell-0f48b25518d59d00",
+     "locked": true,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
+   "source": [
+    "Enter code in the cell below.\n",
+    "\n",
+    "* Create a function called `key_list` which accepts parameters called `dict` and `num`.\n",
+    "* This function will accept a dictionary with candidate names as keys and counts of votes for each candidate and a number value and generate a list of names from the dictionary keys which have a value which matches the number submitted as a parameter.\n",
+    "  * Create an empty list called `names`.\n",
+    "  * Loop through the dictionary keys and values.\n",
+    "  * If the value for a key matches the value for `num`, add the dictionary key to the list names.\n",
+    "* return the list `names`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "60abe392",
+   "metadata": {
+    "deletable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "befc2784242b40a6f120f4203f55f746",
+     "grade": true,
+     "grade_id": "cell-5f100e1e18ff2255",
+     "locked": false,
+     "points": 2,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Highs ['Goofy']\n",
+      "Lows ['Donald', 'Daisy']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# YOUR CODE HERE\n",
+    "#raise NotImplementedError()\n",
+    "\n",
+    "def key_list(dict, num):\n",
+    "  names = []\n",
+    "  for key, value in dict.items():\n",
+    "      if value == num:\n",
+    "          names.append(key)\n",
+    "  return names\n",
+    "\n",
+    "losers = key_list(perfect_count, min(perfect_count.values()))\n",
+    "winners_list = key_list(perfect_count, max(perfect_count.values()))\n",
+    "print(\"Highs\", winners_list)\n",
+    "print(\"Lows\", losers)"
    ]
   },
   {
@@ -235,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "id": "bc642e7b",
    "metadata": {
     "deletable": false,
@@ -251,64 +388,36 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "low count: 2\n",
+      "remove: ['Donald', 'Daisy']\n",
+      "high count: 5\n",
+      "lead: ['Goofy']\n",
+      "\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e82ab239",
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "0bd6fb1d980cf352141f1e88dd1c000f",
-     "grade": false,
-     "grade_id": "cell-0f48b25518d59d00",
-     "locked": true,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "source": [
-    "Enter code in the cell below.\n",
+    "#raise NotImplementedError()\n",
     "\n",
-    "* Create a function called `key_list` which accepts parameters called `dict` and `num`.\n",
-    "* This function will accept a dictionary with candidate names as keys and counts of votes for each candidate and a number value and generate a list of names from the dictionary keys which have a value which matches the number submitted as a parameter.\n",
-    "  * Create an empty list called `names`.\n",
-    "  * Loop through the dictionary keys and values.\n",
-    "  * If the value for a key matches the value for `num`, add the dictionary key to the list names.\n",
-    "* return the list `names`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60abe392",
-   "metadata": {
-    "deletable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "befc2784242b40a6f120f4203f55f746",
-     "grade": true,
-     "grade_id": "cell-5f100e1e18ff2255",
-     "locked": false,
-     "points": 2,
-     "schema_version": 3,
-     "solution": true,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
+    "def create_report(dict):\n",
+    "  text = ''\n",
+    "  text += 'low count: ' + str(min(dict.values())) + '\\n'\n",
+    "  text += 'remove: ' + str(key_list(dict, min(dict.values()))) + '\\n'\n",
+    "  text += 'high count: ' + str(max(dict.values())) + '\\n'\n",
+    "  text += 'lead: ' + str(key_list(dict, max(dict.values()))) + '\\n'\n",
+    "  return text\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "the_survey_says = create_report(perfect_count)\n",
+    "print(the_survey_says)\n",
+    "print(type(the_survey_says))"
    ]
   },
   {
@@ -341,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "id": "b566c49a",
    "metadata": {
     "deletable": false,
@@ -357,11 +466,31 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Minnie', 'Pluto', 'Mickey', 'Goofy'], ['Minnie', 'Pluto', 'Goofy', 'Mickey'], ['Pluto', 'Goofy', 'Mickey', 'Minnie'], ['Goofy', 'Mickey', 'Minnie', 'Pluto'], ['Mickey', 'Goofy', 'Pluto', 'Minnie'], ['Goofy', 'Minnie', 'Pluto', 'Mickey'], ['Goofy', 'Minnie', 'Pluto', 'Mickey'], ['Goofy', 'Pluto', 'Mickey', 'Minnie'], ['Mickey', 'Goofy', 'Pluto', 'Minnie'], ['Mickey', 'Minnie', 'Goofy', 'Pluto'], ['Pluto', 'Minnie', 'Goofy', 'Mickey'], ['Minnie', 'Goofy', 'Pluto', 'Mickey'], ['Goofy', 'Minnie', 'Mickey', 'Pluto'], ['Pluto', 'Mickey', 'Goofy', 'Minnie'], ['Goofy', 'Mickey', 'Minnie', 'Pluto'], ['Pluto', 'Mickey', 'Minnie', 'Goofy'], ['Pluto', 'Mickey', 'Minnie', 'Goofy'], ['Minnie', 'Pluto', 'Mickey', 'Goofy']]\n"
+     ]
+    }
+   ],
    "source": [
+    "import copy\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "\n",
+    "def drop_low(ballots_list, remove_list):\n",
+    "  copy_list = copy.deepcopy(ballots_list)\n",
+    "  for ballot in copy_list:\n",
+    "      for item in remove_list:\n",
+    "          if item in ballot:\n",
+    "              ballot.remove(item)\n",
+    "  return copy_list\n",
+    "\n",
+    "feeling_lucky = drop_low(ballots, losers)\n",
+    "print(feeling_lucky)"
    ]
   },
   {
@@ -391,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "id": "36220e32",
    "metadata": {
     "deletable": false,
@@ -407,11 +536,25 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Candidates are: ['Mickey', 'Minnie', 'Goofy', 'Pluto', 'Donald', 'Daisy']\n",
+      "Total ballots: 18\n",
+      "votes needed to win: 10\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "print(\"The Candidates are:\" , candidates)\n",
+    "print(\"Total ballots:\", len(ballots))\n",
+    "majority = (len(ballots)//2 + 1)\n",
+    "print(\"votes needed to win:\", majority)\n"
    ]
   },
   {
@@ -453,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "id": "fe0aed1d",
    "metadata": {
     "deletable": false,
@@ -469,11 +612,65 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "results from round  1 - {'Minnie': 3, 'Donald': 2, 'Pluto': 3, 'Goofy': 5, 'Mickey': 3, 'Daisy': 2}\n",
+      "low count: 2\n",
+      "remove: ['Donald', 'Daisy']\n",
+      "high count: 5\n",
+      "lead: ['Goofy']\n",
+      "\n",
+      "no winner yet...\n",
+      "results from round  2 - {'Minnie': 4, 'Pluto': 5, 'Goofy': 6, 'Mickey': 3}\n",
+      "low count: 3\n",
+      "remove: ['Mickey']\n",
+      "high count: 6\n",
+      "lead: ['Goofy']\n",
+      "\n",
+      "no winner yet...\n",
+      "results from round  3 - {'Minnie': 5, 'Pluto': 5, 'Goofy': 8}\n",
+      "low count: 5\n",
+      "remove: ['Minnie', 'Pluto']\n",
+      "high count: 8\n",
+      "lead: ['Goofy']\n",
+      "\n",
+      "no winner yet...\n",
+      "results from round  4 - {'Goofy': 18}\n",
+      "low count: 18\n",
+      "remove: ['Goofy']\n",
+      "high count: 18\n",
+      "lead: ['Goofy']\n",
+      "\n",
+      "The winner is:  ['Goofy']\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "winner = \"\"\n",
+    "round = 1\n",
+    "adjusted_ballots = []\n",
+    "adjusted_ballots.append(ballots)\n",
+    "while winner == \"\":\n",
+    "    results = counts(adjusted_ballots[(round-1)])\n",
+    "    print(\"results from round \", round, \"-\", results)\n",
+    "    report = create_report(results)\n",
+    "    print(report)\n",
+    "    if max(results.values()) >= majority:\n",
+    "        winner = key_list(results, max(results.values()))\n",
+    "    else:\n",
+    "        print(\"no winner yet...\") \n",
+    "    remove_list = key_list(results, min(results.values()))\n",
+    "    dropped = drop_low(adjusted_ballots[(round-1)],remove_list)\n",
+    "    adjusted_ballots.append(dropped)\n",
+    "    round += 1\n",
+    "\n",
+    "print(\"The winner is: \", winner)"
    ]
   },
   {
@@ -487,7 +684,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -501,7 +698,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ef85dec995d554d507a1d56daa07ca81c920f134ad660a0fcb3676a56222efcf"
+   }
   }
  },
  "nbformat": 4,
